# macauff

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  algorithms.html  codecov.yml  f-modindex.html  genindex.html  index.html  index.json  info.json  inputs.html  installation.html  macauff.html  objects.inv  pre_post_process.html  py-modindex.html  pyproject.toml  quickstart.html  regressions.json  regressions.xml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: algorithms.doctree  environment.pickle  index.doctree  inputs.doctree  installation.doctree  macauff.doctree  pre_post_process.doctree  quickstart.doctree
.doctrees/api/: macauff.AstrometricCorrections.doctree  macauff.CrossMatch.doctree  macauff.FitPSFPerturbations.doctree  macauff.calculate_proper_motions.doctree  macauff.compute_photometric_likelihoods.doctree  macauff.create_galaxy_counts.doctree  macauff.create_single_perturb_auf.doctree  macauff.csv_to_npy.doctree  macauff.generate_speclite_filters.doctree  macauff.make_island_groupings.doctree  macauff.make_perturb_aufs.doctree  macauff.npy_to_csv.doctree  macauff.rect_slice_csv.doctree  macauff.rect_slice_npy.doctree  macauff.set_list.doctree  macauff.source_pairing.doctree  macauff.tests.generate_random_data.doctree
.doctrees/f90_docs/: group_sources_docs.doctree  misc_func_docs.doctree  pairing_docs.doctree  perturb_auf_docs.doctree  phot_like_docs.doctree  shared_library_docs.doctree
.github/: CODEOWNERS
.github/other/: build-documentation.yml
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  build-documentation.yml  linting.yml  pre-commit-ci.yml  publish-benchmarks-pr.yml  publish-to-pypi.yml  python-package.yaml  python-wheels.yaml  smoke-test.yml  testing-and-coverage.yml
_modules/: index.html
_modules/macauff/: counterpart_pairing.html  derive_psf_auf_params.html  fit_astrometry.html  galactic_proper_motions.html  galaxy_counts.html  group_sources.html  make_set_list.html  matching.html  parse_catalogue.html  perturbation_auf.html  photometric_likelihood.html
_results/: benchmarks.json
_results/gh-runner/: 02ce5cae-virtualenv-py3.10-Cython-build-packaging.json  032f91c3-virtualenv-py3.10-Cython-build-packaging.json  03552b7f-virtualenv-py3.10-Cython-build-packaging.json  0584cedc-virtualenv-py3.10-Cython-build-packaging.json  0591b161-virtualenv-py3.10-Cython-build-packaging.json  0ac36574-virtualenv-py3.10-Cython-build-packaging.json  1124f497-virtualenv-py3.10-Cython-build-packaging.json  11714ae2-virtualenv-py3.10-Cython-build-packaging.json  16d299e5-virtualenv-py3.10-Cython-build-packaging.json  183c0a4a-virtualenv-py3.10-Cython-build-packaging.json  1b076f56-virtualenv-py3.10-Cython-build-packaging.json  1c8f4d98-virtualenv-py3.10-Cython-build-packaging.json  1dddc126-virtualenv-py3.10-Cython-build-packaging.json  2038573f-virtualenv-py3.10-Cython-build-packaging.json  2347fdad-virtualenv-py3.10-Cython-build-packaging.json  239f52ca-virtualenv-py3.10-Cython-build-packaging.json  27e42f5d-virtualenv-py3.10-Cython-build-packaging.json  2987e4b2-virtualenv-py3.10-Cython-build-packaging.json  2fe0244a-virtualenv-py3.10-Cython-build-packaging.json  39412327-virtualenv-py3.10-Cython-build-packaging.json  39903be7-virtualenv-py3.10-Cython-build-packaging.json  3aeeae5e-virtualenv-py3.10-Cython-build-packaging.json  3b7d4e4a-virtualenv-py3.10-Cython-build-packaging.json  3d9002ba-virtualenv-py3.10-Cython-build-packaging.json  3eff8e78-virtualenv-py3.10-Cython-build-packaging.json  419db2f5-virtualenv-py3.10-Cython-build-packaging.json  44faff33-virtualenv-py3.10-Cython-build-packaging.json  4fa0bb29-virtualenv-py3.10-Cython-build-packaging.json  51bd9af9-virtualenv-py3.10-Cython-build-packaging.json  54650ee4-virtualenv-py3.10-Cython-build-packaging.json  54ba6ba6-virtualenv-py3.10-Cython-build-packaging.json  59589aeb-virtualenv-py3.10-Cython-build-packaging.json  5f15fc39-virtualenv-py3.10-Cython-build-packaging.json  6184b110-virtualenv-py3.10-Cython-build-packaging.json  6429319f-virtualenv-py3.10-Cython-build-packaging.json  6448287f-virtualenv-py3.10-Cython-build-packaging.json  67873d46-virtualenv-py3.10-Cython-build-packaging.json  6864f7f0-virtualenv-py3.10-Cython-build-packaging.json  77794f46-virtualenv-py3.10-Cython-build-packaging.json  7891efc9-virtualenv-py3.10-Cython-build-packaging.json  (+39 more)
_sources/: index.rst.txt  installation.rst.txt
_sources/api/: macauff.AstrometricCorrections.rst.txt  macauff.CrossMatch.rst.txt  macauff.FitPSFPerturbations.rst.txt  macauff.create_galaxy_counts.rst.txt  (+13 more)
api/: macauff.AstrometricCorrections.html  macauff.CrossMatch.html  macauff.FitPSFPerturbations.html  macauff.calculate_proper_motions.html  macauff.compute_photometric_likelihoods.html  macauff.create_galaxy_counts.html  macauff.create_single_perturb_auf.html  macauff.csv_to_npy.html  macauff.generate_speclite_filters.html  macauff.make_island_groupings.html  macauff.make_perturb_aufs.html  macauff.npy_to_csv.html  macauff.rect_slice_csv.html  macauff.rect_slice_npy.html  macauff.set_list.html  macauff.source_pairing.html  macauff.tests.generate_random_data.html
benchmarks/: asv.conf.json  benchmarks.py
docs/: algorithms.rst  conf.py  index.rst  inputs.rst  installation.rst  macauff.rst  pre_post_process.rst  quickstart.rst  requirements.txt
f90_docs/: group_sources_docs.html  misc_func_docs.html  pairing_docs.html  perturb_auf_docs.html  phot_like_docs.html  shared_library_docs.html
macauff/: __init__.py  counterpart_pairing.py  counterpart_pairing_fortran.f90  derive_psf_auf_params.py  fit_astrometry.py  galactic_proper_motions.py  galaxy_counts.py  get_trilegal_wrapper.py  group_sources.py  group_sources_fortran.f90  make_set_list.py  matching.py  misc_functions.py  misc_functions_fortran.f90  parse_catalogue.py  perturbation_auf.py  perturbation_auf_fortran.f90  photometric_likelihood.py  photometric_likelihood_fortran.f90  shared_library.f90
src/: .pylintrc
tests/: .pylintrc  conftest.py
(+96 files in other folders)
