[project]
name = "macauff"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Tom J Wilson", email = "t.j.wilson@exeter.ac.uk" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "astropy",
    "matplotlib",
    # We need to build a binary compatible with numpy 1.21
    "numpy>=1.21",
    "scipy",
    "pandas",
    "skypy",
    "speclite",
    "dustmaps",
    "ipykernel", # Support for Jupyter notebooks
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "tox", # Used for unit-testing and coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
    "pylint", # Used for static linting of files
    "ipython", # Also used in building notebooks into Sphinx
    "asv==0.6.1", # Used to compute performance benchmarks
]
test = [
    "pytest-astropy",
]
docs = [
    "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
    "sphinx-astropy",
    "sphinx-fortran",
    "six",
]

[metadata]
long_description = { file = "README.md" }
url = "https://github.com/macauff/macauff"

[build-system]
requires = [
    "scikit-build-core",
    # We need as old numpy as possible for binary compatibility,
    # but we also need some f2py features intrdocued in 1.21.
    # The oldest-supported-numpy for Py3.10 is 1.21.
    "numpy==1.21.6; python_version<'3.10'",
    "oldest-supported-numpy; python_version>='3.10'",
]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build-frontend = "build"
skip = [
    "*musl*",  # we don't support MUSL Linux
    "pp*",  # we don't support PyPy
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/macauff/_version.py"]

[tool.setuptools_scm]
write_to = "src/macauff/_version.py"

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110